--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -9,7 +9,7 @@
     </p>
     <b class="hero__try-it">Why don’t you try it now ?</b>
     <a href="#" class="hero__button">Download</a>
-    <picture>
+    <picture class="hero__image">
       <source
         srcset="
           ./images/landing-hero-image-mob.png?as=webp&width=268 1x,
