--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -7,7 +7,7 @@
 .header-container {
   padding-left: 30px;
   padding-right: 11px;
-  max-width: 420px;
+  max-width: min(420px, 100%);
   margin: 0 auto;
 }
 .header__nav {
