--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,7 +1,9 @@
 @import './utils/normalize';
+@import './utils/reset';
 @import './utils/fonts';
 @import './utils/vars';
 @import './utils/mixines';
+@import './utils/placeholders';
 @import './utils/normalize';
 @import './utils/common';
 
