--- a/src/sass/utils/_mixines.scss
+++ b/src/sass/utils/_mixines.scss
@@ -8,6 +8,50 @@
   color: $col;
   position: relative;
   max-width: 500px;
+  display: block;
+  text-decoration: none;
+  width: fit-content;
+
+  &::before {
+    content: '';
+    position: absolute;
+    width: 45.3947%;
+    height: calc(100% + 8px);
+    left: -4px;
+    top: -4px;
+
+    border-left: solid $bordcol 2px;
+    border-top: solid $bordcol 2px;
+    border-bottom: solid $bordcol 2px;
+  }
+
+  &::after {
+    content: '';
+    position: absolute;
+    width: 45.3947%;
+    height: calc(100% + 8px);
+    right: -4px;
+    top: -4px;
+
+    border-right: solid $bordcol 2px;
+    border-top: solid $bordcol 2px;
+    border-bottom: solid $bordcol 2px;
+  }
+}
+
+@mixin button-mob($col, $bgcol, $bordcol) {
+  text-align: center;
+  cursor: pointer;
+  font-family: 'VALORANT';
+  text-transform: uppercase;
+  padding: 10px 20px;
+  background-color: $bgcol;
+  color: $col;
+  position: relative;
+  max-width: 500px;
+  display: block;
+  text-decoration: none;
+  width: fit-content;
 
   &::before {
     content: '';
