--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -12,6 +12,40 @@
     <picture class="hero__image">
       <source
         srcset="
+          ./images/landing-hero-img.png?as=webp&width=771  1x,
+          ./images/landing-hero-img.png?as=webp&width=1542 2x,
+          ./images/landing-hero-img.png?as=webp&width=2313 3x
+        "
+        media="(min-width:
+      1440px)"
+        sizes="771px"
+        type="image/webp"
+      />
+      <source
+        srcset="
+          ./images/landing-hero-img.png?width=771  1x,
+          ./images/landing-hero-img.png?width=1542 2x,
+          ./images/landing-hero-img.png?width=2313 3x
+        "
+        media="(min-width:
+      1440px)"
+        sizes="771px"
+        type="image/зтп"
+      />
+      <source
+        srcset="
+          ./images/landing-hero-img.png?as=webp&width=771  1x,
+          ./images/landing-hero-img.png?as=webp&width=1542 2x,
+          ./images/landing-hero-img.png?as=webp&width=2313 3x
+        "
+        media="(min-width:
+      768px)"
+        sizes="771px"
+        type="image/webp"
+      />
+
+      <source
+        srcset="
           ./images/landing-hero-image-mob.png?as=webp&width=268 1x,
           ./images/landing-hero-image-mob.png?as=webp&width=536 2x,
           ./images/landing-hero-image-mob.png?as=webp&width=804 3x
@@ -33,8 +67,8 @@
       <img
         src="./images/landing-hero-image-mob.png"
         alt="Omen picture"
-        width="268"
-        height="333"
+        width=""
+        height=""
       />
     </picture>
   </div>
