--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -7,7 +7,7 @@
 .header-container {
   padding-left: 30px;
   padding-right: 11px;
-  max-width: min(420px, 100%);
+  width: min(420px, 100%);
   margin: 0 auto;
 }
 .header__nav {
@@ -32,4 +32,20 @@
 }
 .header__menu-icon {
   fill: var(--red);
+}
+
+@media screen and (min-width: 678px) {
+  .header-container {
+    padding-left: 62px;
+    padding-right: 34px;
+    width: min(768px, 100%);
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .header-container {
+    padding-left: 140px;
+    padding-right: 72px;
+    width: min(1440px, 100%);
+  }
 }
