--- a/src/sass/utils/_common.scss
+++ b/src/sass/utils/_common.scss
@@ -4,3 +4,19 @@
   padding-right: 25px;
   width: min(420px, 100%);
 }
+
+@media screen and (min-width: 678px) {
+  .container {
+    padding-left: 114px;
+    padding-right: 114px;
+    width: min(768px, 100%);
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .container {
+    padding-left: 140px;
+    padding-right: 140px;
+    width: min(1440px, 100%);
+  }
+}
