--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,7 +1,7 @@
 <section class="hero">
   <div class="hero__body container">
     <p class="hero__subtitle">A 5v5 character -based tactical shooter</p>
-    <h1 class="hero__title">Valorant</h1>
+    <h1 class="hero__title">vALORaNT</h1>
     <p class="hero-text">
       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tempus, turpis
       massa arcu blandit justo enim. Mauris dis libero leo in amet proin
@@ -34,14 +34,25 @@
       />
       <source
         srcset="
-          ./images/landing-hero-img.png?as=webp&width=771  1x,
-          ./images/landing-hero-img.png?as=webp&width=1542 2x,
-          ./images/landing-hero-img.png?as=webp&width=2313 3x
+          ./images/landing-hero-img.png?as=webp&width=420  1x,
+          ./images/landing-hero-img.png?as=webp&width=840  2x,
+          ./images/landing-hero-img.png?as=webp&width=1260 3x
         "
         media="(min-width:
       768px)"
         sizes="771px"
         type="image/webp"
+      />
+      <source
+        srcset="
+          ./images/landing-hero-img.png?width=420  1x,
+          ./images/landing-hero-img.png?width=840  2x,
+          ./images/landing-hero-img.png?width=1260 3x
+        "
+        media="(min-width:
+      768px)"
+        sizes="771px"
+        type="image/png"
       />
 
       <source
