--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -3,12 +3,19 @@
   padding-top: 20px;
   padding-bottom: 20px;
   width: 100%;
+  z-index: 10;
 }
 .header-container {
   padding-left: 30px;
   padding-right: 11px;
   width: min(420px, 100%);
   margin: 0 auto;
+
+  &::after {
+    content: '';
+    width: 15.3955%;
+    height: 15.3955%;
+  }
 }
 .header__nav {
   display: flex;
@@ -34,7 +41,7 @@
   fill: var(--red);
 }
 
-@media screen and (min-width: 678px) {
+@media screen and (min-width: 768px) {
   .header-container {
     padding-left: 62px;
     padding-right: 34px;
