--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -8,6 +8,8 @@
       sagittis fringilla.
     </p>
     <b class="hero__try-it">Why don’t you try it now ?</b>
+    <p class="hero__players">14M active players monthly</p>
+    <p class="hero__skills">Test your skills</p>
     <a href="#" class="hero__button">Download</a>
     <picture class="hero__image">
       <source
