--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -52,35 +52,38 @@
       <div class="video-placeholder"></div>
     </div>
 
-    <p class="about__text">
-      Blend your style and experience on a global, competitive stage. You have
-      13 rounds to attack and defend your side using sharp gunplay and tactical
-      abilities. And, with one life per-round, you'll need to think faster than
-      your opponent if you want to survive. Take on foes across Competitive and
-      Unranked modes as well as Deathmatch and Spike Rush. <br />
-      Blend your style and experience on a global, competitive stage. You have
-      13 rounds to attack and defend your side using sharp gunplay and tactical
-      abilities. And, with one life per-round, you'll need to think faster than
-      your opponent if you want to survive. Take on foes across Competitive and
-      Unranked modes as well as Deathmatch and Spike Rush.
-    </p>
-    <dl class="about__list features-list">
-      <div class="features-list__container">
-        <dt class="features-list__number">5</dt>
-        <dd class="features-list__feature">Players</dd>
-      </div>
-      <div class="features-list__container">
-        <dt class="features-list__number">13</dt>
-        <dd class="features-list__feature">Rounds</dd>
-      </div>
-      <div class="features-list__container">
-        <dt class="features-list__number">16</dt>
-        <dd class="features-list__feature">Agents</dd>
-      </div>
-      <div class="features-list__container">
-        <dt class="features-list__number">4</dt>
-        <dd class="features-list__feature">Maps</dd>
-      </div>
-    </dl>
+    <div class="decorations">
+      <p class="about__text">
+        Blend your style and experience on a global, competitive stage. You have
+        13 rounds to attack and defend your side using sharp gunplay and
+        tactical abilities. And, with one life per-round, you'll need to think
+        faster than your opponent if you want to survive. Take on foes across
+        Competitive and Unranked modes as well as Deathmatch and Spike Rush.
+        <br />
+        Blend your style and experience on a global, competitive stage. You have
+        13 rounds to attack and defend your side using sharp gunplay and
+        tactical abilities. And, with one life per-round, you'll need to think
+        faster than your opponent if you want to survive. Take on foes across
+        Competitive and Unranked modes as well as Deathmatch and Spike Rush.
+      </p>
+      <dl class="about__list features-list">
+        <div class="features-list__container">
+          <dt class="features-list__number">5</dt>
+          <dd class="features-list__feature">Players</dd>
+        </div>
+        <div class="features-list__container">
+          <dt class="features-list__number">13</dt>
+          <dd class="features-list__feature">Rounds</dd>
+        </div>
+        <div class="features-list__container">
+          <dt class="features-list__number">16</dt>
+          <dd class="features-list__feature">Agents</dd>
+        </div>
+        <div class="features-list__container">
+          <dt class="features-list__number">4</dt>
+          <dd class="features-list__feature">Maps</dd>
+        </div>
+      </dl>
+    </div>
   </div>
 </section>
