--- a/src/sass/components/_about.scss
+++ b/src/sass/components/_about.scss
@@ -194,15 +194,15 @@
     vertical-align: bottom;
 
     color: rgba(236, 232, 225, 0.1);
-    &::after {
-      content: '';
-      position: absolute;
-      width: 53%;
-      height: 2px;
-      background-color: var(--light);
-      left: 0;
-      bottom: 0;
-    }
+    // &::after {
+    //   content: '';
+    //   position: absolute;
+    //   width: 53%;
+    //   height: 2px;
+    //   background-color: var(--light);
+    //   left: 0;
+    //   bottom: 0;
+    // }
   }
   .about__content {
     padding-bottom: 0;
@@ -238,15 +238,24 @@
 
   .features-list {
     padding-left: 80px;
-    // &::before {
-    //   content: '';
-    //   position: absolute;
-    //   height: 100%;
-    //   bottom: 0;
-    //   left: 0;
-    //   width: 2px;
-    //   background-color: var(--light);
-    // }
+    &::before {
+      content: '';
+      position: absolute;
+      height: 87.5%;
+      top: 135px;
+      left: 140px;
+      width: 2px;
+      background-color: var(--light);
+    }
+    &::after {
+      content: '';
+      position: absolute;
+      width: 43%;
+      top: 135px;
+      left: 140px;
+      height: 2px;
+      background-color: var(--light);
+    }
   }
   .features-list__container {
     position: relative;
@@ -261,8 +270,8 @@
     line-height: calc(45 / 36);
   }
 
-  .decorations {
-    border-left: solid 1px var(--light);
-    padding-bottom: 138px;
-  }
+  // .decorations {
+  //   border-left: solid 1px var(--light);
+  //   padding-bottom: 138px;
+  // }
 }
