--- a/src/sass/components/_about.scss
+++ b/src/sass/components/_about.scss
@@ -98,6 +98,10 @@
   margin: 0;
 }
 
+.about__aside {
+  display: none;
+}
+
 @media screen and (min-width: 410px) {
   .about__title {
     font-size: 24px;
@@ -117,6 +121,7 @@
   .about__title-copy {
     text-align: center;
     white-space: nowrap;
+
     font-size: 110px;
     line-height: calc(163 / 130);
 
@@ -169,12 +174,23 @@
 
 @media screen and (min-width: 1440px) {
   .about {
-    padding-top: 75px;
     padding-bottom: 0;
+    padding-top: 0;
   }
 
   .about__body {
+    padding-top: 75px;
     padding-bottom: 164px;
+
+    &::after {
+      content: '';
+      position: absolute;
+      right: 140px;
+      top: 0;
+      background-color: #ffffff;
+      width: 2px;
+      height: 85%;
+    }
   }
 
   .about__title-container {
@@ -188,6 +204,7 @@
     left: 80px;
     top: 50%;
     line-height: calc(80 / 64);
+
     transform: translateY(-50%);
   }
   .about__title-copy {
@@ -198,15 +215,6 @@
     vertical-align: bottom;
 
     color: rgba(236, 232, 225, 0.1);
-    // &::after {
-    //   content: '';
-    //   position: absolute;
-    //   width: 53%;
-    //   height: 2px;
-    //   background-color: var(--light);
-    //   left: 0;
-    //   bottom: 0;
-    // }
   }
   .about__content {
     padding-bottom: 0;
@@ -246,9 +254,9 @@
     &::before {
       content: '';
       position: absolute;
-      height: 88.5593%;
-      top: 135px;
-      left: 140px;
+      height: 83.2669%;
+      top: 210px;
+      left: 130px;
       width: 2px;
       background-color: var(--light);
     }
@@ -256,8 +264,8 @@
       content: '';
       position: absolute;
       width: 43%;
-      top: 135px;
-      left: 140px;
+      top: 210px;
+      left: 130px;
       height: 2px;
       background-color: var(--light);
     }
@@ -275,8 +283,23 @@
     line-height: calc(45 / 36);
   }
 
-  // .decorations {
-  //   border-left: solid 1px var(--light);
-  //   padding-bottom: 138px;
-  // }
+  .about__aside {
+    position: absolute;
+    right: 128px;
+    bottom: 64px;
+
+    display: block;
+    font-family: 'Source Sans Pro';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 24px;
+    line-height: calc(30 / 24);
+    letter-spacing: 0.25em;
+    text-transform: uppercase;
+
+    writing-mode: vertical-lr;
+    transform: rotate(-180deg);
+
+    color: #ffffff;
+  }
 }
