--- a/src/sass/utils/_fonts.scss
+++ b/src/sass/utils/_fonts.scss
@@ -74,7 +74,8 @@
   font-family: 'Source sans pro';
   font-style: italic;
   font-weight: 600;
-  src: local(''), url('../fonts/SourceSansPro-SemiBold.ttf') format('truetype');
+  src: local(''),
+    url('../fonts/SourceSansPro-SemiBoldItalic.ttf') format('truetype');
 }
 
 @font-face {
