--- a/src/sass/components/_about.scss
+++ b/src/sass/components/_about.scss
@@ -137,17 +137,19 @@
     right: 0;
     bottom: 0;
     margin-bottom: 34px;
+    width: 420px;
   }
   .about__image {
-    margin: 0 auto;
+    margin-right: 0;
     display: block;
     width: fit-content;
+    margin-bottom: 70px;
   }
   .video-placeholder {
     position: absolute;
     background-color: var(--dark);
-    width: 100%;
-    height: 200px;
+    width: 420px;
+    height: 235px;
     bottom: 0;
     left: 0;
   }
