decoration script done

--- a/src/partials/agents.html
+++ b/src/partials/agents.html
@@ -69,8 +69,6 @@
     </p>
     <div class="assistant"></div>
 
-    <p class="aside">
-      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolore, ullam.
-    </p>
+    <p class="aside">Lorem ipsum dolor</p>
   </div>
 </section>
