--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -49,7 +49,7 @@
         />
         <img src="./images/Jett.png" alt="Jett image" />
       </picture>
-      <div class="video-placeholder"></div>
+      <div class="about-video-placeholder"></div>
     </div>
 
     <div class="decorations">
