--- a/src/sass/components/_about.scss
+++ b/src/sass/components/_about.scss
@@ -49,7 +49,7 @@
   display: block;
   width: fit-content;
 }
-.video-placeholder {
+.about-video-placeholder {
   position: absolute;
   background-color: var(--dark);
   width: 100%;
@@ -163,7 +163,7 @@
     width: fit-content;
     margin-bottom: 70px;
   }
-  .video-placeholder {
+  .about-video-placeholder {
     position: absolute;
     background-color: var(--dark);
     width: 420px;
@@ -299,7 +299,7 @@
     width: fit-content;
     margin-bottom: 0;
   }
-  .video-placeholder {
+  .about-video-placeholder {
     position: absolute;
     background-color: var(--dark);
     width: 727px;
