--- a/src/sass/utils/_vars.scss
+++ b/src/sass/utils/_vars.scss
@@ -5,4 +5,13 @@
   --lightred: #ff8189;
   --light: #ece8e1;
   --transparent: rgba(0, 0, 0, 0);
+
+  --first-pseudoelement-height: 0;
+  --first-pseudoelement-left: 0;
+  --first-pseudoelement-top: 0;
+  --first-pseudoelement-width: 0;
+
+  --second-pseudoelement-height: 0;
+  --second-pseudoelement-right: 0;
+  --second-pseudoelement-top: 0;
 }
