--- a/src/partials/agents.html
+++ b/src/partials/agents.html
@@ -1,74 +1,53 @@
-<section class="section decorated-section">
-  <div class="container test-container">
-    <h2 class="test-h2">Title of random length fghjjfgjhgjjhgjhjhgj</h2>
-    <p class="test-p">
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam iure
-      pariatur a excepturi, velit incidunt perferendis illum, distinctio
-      delectus voluptatum reprehenderit ducimus dignissimos. Voluptas
-      voluptatibus velit adipisci amet quaerat omnis, sed esse. Illum nulla
-      blanditiis quidem eum laboriosam obcaecati aliquam. Modi laboriosam
-      voluptatum dignissimos sint distinctio incidunt? Amet quia molestias,
-      nulla enim ab dolor maiores dolores quisquam aspernatur, nesciunt
-      assumenda labore quidem deserunt vero accusamus, eum debitis voluptates.
-      Dolore aliquam, est tempore corrupti libero a nihil, non cumque neque enim
-      doloremque rerum sed possimus? Ipsa inventore, ea pariatur dolores omnis
-      labore optio accusantium aspernatur natus at incidunt magni quidem qui
-      impedit praesentium debitis odit. Ut, magni officia corrupti accusamus
-      omnis sint mollitia cupiditate velit, tenetur laborum ducimus repellat
-      libero, expedita provident impedit nihil tempore delectus! Veritatis, nemo
-      eius voluptatibus modi quibusdam, voluptatem, non vero id adipisci quos
-      veniam fugiat deserunt! Eligendi excepturi illo corporis harum aut unde
-      blanditiis provident optio, molestias natus ipsum exercitationem cumque
-      autem quibusdam quos omnis soluta debitis minima velit ducimus est,
-      voluptate pariatur facere temporibus? Non est, deserunt velit voluptates
-      nihil, odit inventore excepturi ea quasi adipisci maiores animi? Porro
-      illum enim sit ex necessitatibus, eos impedit tempora facere rerum ducimus
-      veritatis voluptatibus tempore fugiat repudiandae consequuntur, quos
-      assumenda debitis reprehenderit quam eveniet vero et! Iusto, commodi?
-      Expedita laudantium rerum suscipit perspiciatis maxime, omnis excepturi
-      ipsum voluptates eum tenetur voluptatum. Porro atque blanditiis cum
-      tempora vero! Culpa possimus ullam porro iure minima, obcaecati eum
-    </p>
-    <div class="assistant"></div>
-
-    <p class="aside">
-      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolore, ullam.
-    </p>
+<section class="agents decorated-section">
+  <div class="agents-title-container decorated-title">
+    <h2 class="agents__title">Agents</h2>
+    <p class="agents__title-copy">Agents</p>
   </div>
-</section>
-<section class="section decorated-section">
-  <div class="container test-container">
-    <h2 class="test-h2">Title of random length fghjjfgjhgjjhgjhjhgj</h2>
-    <p class="test-p">
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam iure
-      pariatur a excepturi, velit incidunt perferendis illum, distinctio
-      delectus voluptatum reprehenderit ducimus dignissimos. Voluptas
-      voluptatibus velit adipisci amet quaerat omnis, sed esse. Illum nulla
-      blanditiis quidem eum laboriosam obcaecati aliquam. Modi laboriosam
-      voluptatum dignissimos sint distinctio incidunt? Amet quia molestias,
-      nulla enim ab dolor maiores dolores quisquam aspernatur, nesciunt
-      assumenda labore quidem deserunt vero accusamus, eum debitis voluptates.
-      Dolore aliquam, est tempore corrupti libero a nihil, non cumque neque enim
-      doloremque rerum sed possimus? Ipsa inventore, ea pariatur dolores omnis
-      labore optio accusantium aspernatur natus at incidunt magni quidem qui
-      impedit praesentium debitis odit. Ut, magni officia corrupti accusamus
-      omnis sint mollitia cupiditate velit, tenetur laborum ducimus repellat
-      libero, expedita provident impedit nihil tempore delectus! Veritatis, nemo
-      eius voluptatibus modi quibusdam, voluptatem, non vero id adipisci quos
-      veniam fugiat deserunt! Eligendi excepturi illo corporis harum aut unde
-      blanditiis provident optio, molestias natus ipsum exercitationem cumque
-      autem quibusdam quos omnis soluta debitis minima velit ducimus est,
-      voluptate pariatur facere temporibus? Non est, deserunt velit voluptates
-      nihil, odit inventore excepturi ea quasi adipisci maiores animi? Porro
-      illum enim sit ex necessitatibus, eos impedit tempora facere rerum ducimus
-      veritatis voluptatibus tempore fugiat repudiandae consequuntur, quos
-      assumenda debitis reprehenderit quam eveniet vero et! Iusto, commodi?
-      Expedita laudantium rerum suscipit perspiciatis maxime, omnis excepturi
-      ipsum voluptates eum tenetur voluptatum. Porro atque blanditiis cum
-      tempora vero! Culpa possimus ullam porro iure minima, obcaecati eum
-    </p>
-    <div class="assistant"></div>
 
-    <p class="aside">Lorem ipsum dolor</p>
+  <div class="agents__content">
+    <picture class="agents__image">
+      <source
+        srcset="
+          ./images/Phoenix.png?as=webp&width=528  1x,
+          ./images/Phoenix.png?as=webp&width=1056 2x,
+          ./images/Phoenix.png?as=webp&width=1584 3x
+        "
+        media="(min-width:1440px)"
+        sizes=""
+        type="image/webp"
+      />
+      <source
+        srcset="
+          ./images/Phoenix.png?width=528  1x,
+          ./images/Phoenix.png?width=1056 2x,
+          ./images/Phoenix.png?width=1584 3x
+        "
+        media="(min-width:1440px)"
+        sizes=""
+        type="image/png"
+      />
+      <source
+        srcset="
+          ./images/Phoenix.png?as=webp&width=266 1x,
+          ./images/Phoenix.png?as=webp&width=532 2x,
+          ./images/Phoenix.png?as=webp&width=798 3x
+        "
+        media=""
+        sizes=""
+        type="image/webp"
+      />
+      <source
+        srcset="
+          ./images/Phoenix.png?as=webp&width=266 1x,
+          ./images/Phoenix.png?as=webp&width=532 2x,
+          ./images/Phoenix.png?as=webp&width=798 3x
+        "
+        media=""
+        sizes=""
+        type="image/png"
+      />
+      <img src="./images/Phoenix.png" alt="Phoenix image" />
+    </picture>
+    <div class="video-placeholder"></div>
   </div>
 </section>
